# ValaGtkTemplate

./: README.md  example.doap  meson.build  win_dist.sh
build-aux/: installer.nsi.in  win_dist.sh.in
data/: gresource.xml  meson.build
data/ui/: main-window.blp  meson.build  window.blp
src/: app.vala  build.vala.in  main.vala  meson.build
src/core/: application.vala
src/ui/: main-window.vala  meson.build
